# Bookers

./: .env.example  .gitignore  Cargo.toml  OCR_README.md  PROJECT_CONTEXT.md  TEST_RESULTS.md  TEXTBOOK_ARCHITECTURE.md  TEXTBOOK_FEATURE_GUIDE.md  TODO.md  down_sub.py  dw.py  justfile  main.js  ocr.py  sub.py  test_import.sh  test_with_pages.sh
ocr/algebra-7.pdf/: page_3.json
src/: cli.rs  constants.rs  error.rs  lib.rs  main.rs  server.rs
src/config/: mod.rs
src/handlers/: batch.rs  index.rs  metadata.rs  mod.rs  ocr.rs  page_ocr.rs  preview.rs  problems.rs  smart_features.rs  textbook.rs  websocket.rs
src/models/: mod.rs  problem.rs
src/services/: ai_parser.rs  ai_solver.rs  auto_tagger.rs  background.rs  batch_processor.rs  cache.rs  database.rs  export.rs  file.rs  knowledge_graph.rs  mod.rs  ocr.rs  page_parser.rs  parser.rs  retry.rs  similarity.rs  toc_detector.rs  validation.rs
src/utils/: mod.rs
static/: style.css
templates/: index.html  pdf_view.html
templates/textbook/: chapter_problems.html  page_browser.html  page_view.html  problem_simple.html  problem_view.html
