[package]
name = "booker-web"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
regex = "1"
actix-files = "0.6.6"
actix-web = "4.10.2"
anyhow = "1.0.98"
base64 = "0.22.1"
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tera = "1.20.0"
tokio = { version = "1.44.2", features = ["full"] }
urlencoding = "2.1.3"
walkdir = "2.5.0"
dotenv = "0.15"
lazy_static = "1.4"
clap = { version = "4.5", features = ["derive"] }
